manifests/aaa-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aaa-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: aaa-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: imp2/standard-website:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: aaa-ns
spec:
  selector:
    app: website
  ports:
  - port: 80
    targetPort: 80
