manifests/bbb-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bbb-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-deployment
  namespace: bbb-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio
  template:
    metadata:
      labels:
        app: gradio
    spec:
      containers:
      - name: gradio
        image: imp2/gradio-text-converter:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-service
  namespace: bbb-ns
spec:
  selector:
    app: gradio
  ports:
  - port: 80
    targetPort: 80
