manifests/eee-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eee-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-deployment
  namespace: eee-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonar
        image: imp2/sonar-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-service
  namespace: eee-ns
spec:
  selector:
    app: sonar
  ports:
  - port: 80
    targetPort: 80
